# robotino4

resources/: ObstacleAvoidance2.fll
robotino_fuzzy/: CMakeLists.txt  package.xml  robotino_tcp_bridge.py  setup.cfg.bak  setup.py.bak  sim_node.py
robotino_fuzzy/launch/: fuzzy_sim.launch copy.py  fuzzy_sim.launch.py  robotino_fuzzy.launch.py
robotino_fuzzy/resources/: ObstacleAvoidance.fll  ObstacleAvoidance1.fll  ObstacleAvoidance2.fll  ObstacleAvoidance_old.fll
robotino_fuzzy/robotino_fuzzy/: fuzzy_controller_node_old.py  robotino_tcp_bridge.py  robotino_viz.py  sim_node.py
robotino_fuzzy/src/: fuzzy_controller_node.cpp  fuzzy_test.cpp
