<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_fuzzy</name>
  <version>0.0.0</version>
  <description>Robotino simulation with fuzzy control and odometry</description>
  <maintainer email="zhmisha2014@gmail.com">jv4k</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  
  <depend>ament_index_cpp</depend>

  <!-- ROS2 Message dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-skfuzzy</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  <exec_depend>python3-keyboard</exec_depend>
  <exec_depend>python3-socket</exec_depend>
  <exec_depend>python3-requests</exec_depend>
  <exec_depend>python3-tf-transformations</exec_depend>

  <!-- Build system -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>